--- a/trunk/app/locale/zh_TW/Mage_Adminhtml.csv
+++ b/trunk/app/locale/zh_TW/Mage_Adminhtml.csv
@@ -798,131 +798,131 @@
 "Save Template","儲存模板"
 "Newsletter Subscription","電子報訂閱"
 "Delete User","刪除用戶"
-"Invalid Shipping Price ""%s"" in the Row #%s","Invalid Shipping Price ""%s"" in the Row #%s"
-"Customers Tags","Customers Tags"
-"Image","Image"
-"Subscribers From","Subscribers From"
-"Account Information","Account Information"
-"Order status was successfully changed","Order status was successfully changed"
-"New Set Name","New Set Name"
-"Create Order","Create Order"
-"Invoice was not saved","Invoice was not saved"
-"Invoice was updated succesfully","Invoice was updated succesfully"
-"Invoice #","Invoice #"
-"Static","Static"
-"Date Updated","Date Updated"
-"Tag use","Tag use"
-"Order was successfully cancelled","Order was successfully cancelled"
-"Message","Message"
-"Subject","Subject"
-"Save Customer Group","Save Customer Group"
-"This page no longer exists","This page no longer exists"
-"Search was successfully saved","Search was successfully saved"
-"Rating information","Rating information"
-"Answer Title","Answer Title"
-"Order #%s (%s)","Order #%s (%s)"
-"No","No"
-"Edit Invoice #","Edit Invoice #"
-"Edit Attribute Set '{$this->_getSetData()->getAttributeSetName()}'","Edit Attribute Set '{$this->_getSetData()->getAttributeSetName()}'"
-"All Products","All Products"
-"Export CSV","Export CSV"
-"Save And Resume","Save And Resume"
-"View Newsletter","View Newsletter"
-"To Date","To Date"
-"Matching Products","Matching Products"
-"The page you are trying to save no longer exists","The page you are trying to save no longer exists"
-"Save Class","Save Class"
-"Edit %s Tax Class","Edit %s Tax Class"
-"User description","User description"
-"Config","Config"
-"Order Total","Order Total"
-"Store","Store"
-"Please, select Customer Tax Class","Please, select Customer Tax Class"
-"Error while saving this set. Set with the same name already exists.","Error while saving this set. Set with the same name already exists."
-"Add New Role","Add New Role"
-"Discount","Discount"
-"Unsubscribe Selected","Unsubscribe Selected"
-"Yes/No","Yes/No"
-"Edit Email Template","Edit Email Template"
-"Visible In","Visible In"
-"Manage Blocks","Manage Blocks"
-"New Tax Rule","New Tax Rule"
-"This block no longer exists","This block no longer exists"
-"Delete Attribute","Delete Attribute"
-"Decimal","Decimal"
-"Edit System Template","Edit System Template"
-"Frontend Model","Frontend Model"
-"Default Store","Default Store"
-"Detailed Rating","Detailed Rating"
-"Save And Continue Edit","Save And Continue Edit"
-"Are you sure you want to do this?","Are you sure you want to do this?"
-"Customer Tax Class","Customer Tax Class"
-"Feature Products","Feature Products"
-"New Review","New Review"
-"Number of Uses","Number of Uses"
-"Invalid Answer","Invalid Answer"
-"Website Information","Website Information"
-"Attribute set with the same name already exists.","Attribute set with the same name already exists."
-"Searchable","Searchable"
-"Error while saving this role. Please try again later.","Error while saving this role. Please try again later."
-"Group was successfully deleted","Group was successfully deleted"
-"Order was not changed","Order was not changed"
-"Per Item","Per Item"
-"Edit Product Attribute","Edit Product Attribute"
-"System Properties","System Properties"
-"County","County"
-"General Information","General Information"
-"ex. http://domain.com","ex. http://domain.com"
-"Manage Catalog Categories","Manage Catalog Categories"
-"Wishlist vs. Regular Order","Wishlist vs. Regular Order"
-"New Template","New Template"
-"Delete Website","Delete Website"
-"All stores","All stores"
-"Purchased On","Purchased On"
-"Edit Order Status","Edit Order Status"
-"Layout","Layout"
-"Password Confirmation","Password Confirmation"
-"Tag was successfully deleted","Tag was successfully deleted"
-"Catalog Searches","Catalog Searches"
-"To","To"
-"Error while deleting this role. Please try again later.","Error while deleting this role. Please try again later."
-"Select All Stores","Select All Stores"
-"Offline","Offline"
-"Recently Viewed","Recently Viewed"
-"Description","Description"
-"Tax class was successfully deleted","Tax class was successfully deleted"
-"Are you sure?","Are you sure?"
-"Never","Never"
-"Block Information","Block Information"
-"Email","Email"
-"Included Customer Groups","Included Customer Groups"
-"Disable","Disable"
-"Delete Class","Delete Class"
-"Poll Information","Poll Information"
-"Create Newsletter Template","Create Newsletter Template"
-"Coupons","Coupons"
-"Customer","Customer"
-"Last Review","Last Review"
-"Polls","Polls"
-"Edit","Edit"
-"Country","Country"
-"Remove","Remove"
-"Account successfully saved","Account successfully saved"
-"Days in Wishlist","Days in Wishlist"
-"Page was successfully saved","Page was successfully saved"
-"Manage Product Sets","Manage Product Sets"
-"Review Details","Review Details"
-"Add New Rating","Add New Rating"
+"Invalid Shipping Price ""%s"" in the Row #%s","無效的郵寄地址 ""%s"" 於行 #%s"
+"Customers Tags","客戶標籤"
+"Image","圖片"
+"Subscribers From","訂閱從"
+"Account Information","帳號資料"
+"Order status was successfully changed","訂單狀態已更改成功"
+"New Set Name","新組合名稱"
+"Create Order","建立訂單"
+"Invoice was not saved","發片並未儲存"
+"Invoice was updated succesfully","發票已成功更新"
+"Invoice #","發票號碼 #"
+"Static","固定"
+"Date Updated","更新日期"
+"Tag use","使用標籤"
+"Order was successfully cancelled","訂單已成功取消"
+"Message","訊息"
+"Subject","主題"
+"Save Customer Group","儲存客戶群組"
+"This page no longer exists","此頁已不存在"
+"Search was successfully saved","搜索已成功儲存"
+"Rating information","評比資料"
+"Answer Title","回應標題"
+"Order #%s (%s)","訂單 #%s (%s)"
+"No","否"
+"Edit Invoice #","編輯訂單 #"
+"Edit Attribute Set '{$this->_getSetData()->getAttributeSetName()}'","編輯屬性組 '{$this->_getSetData()->getAttributeSetName()}'"
+"All Products","所有商品"
+"Export CSV","輸出 CSV"
+"Save And Resume","儲存並繼續"
+"View Newsletter","查看電子報"
+"To Date","至今"
+"Matching Products","符合商品"
+"The page you are trying to save no longer exists","您要儲存的頁面已不存在"
+"Save Class","儲存類別"
+"Edit %s Tax Class","編輯 %s 稅別"
+"User description","用戶敘述"
+"Config","設定"
+"Order Total","訂單總額"
+"Store","商店"
+"Please, select Customer Tax Class","請選擇客戶稅別"
+"Error while saving this set. Set with the same name already exists.","儲存此組合錯誤。已有同樣樣的名稱存在。"
+"Add New Role","加入新角色"
+"Discount","折扣"
+"Unsubscribe Selected","取消選擇的訂閱人"
+"Yes/No","是/否"
+"Edit Email Template","編輯電子郵件模板"
+"Visible In","顯示於"
+"Manage Blocks","管理模塊"
+"New Tax Rule","新稅則"
+"This block no longer exists","此模塊已不存在"
+"Delete Attribute","刪除屬性"
+"Decimal","十進位"
+"Edit System Template","編輯系統模板"
+"Frontend Model","前台模組"
+"Default Store","預設的商店"
+"Detailed Rating","詳細評比"
+"Save And Continue Edit","儲存並繼續編輯"
+"Are you sure you want to do this?","你確定嗎？"
+"Customer Tax Class","客戶稅別"
+"Feature Products","特色商品"
+"New Review","新評論"
+"Number of Uses","使用次數"
+"Invalid Answer","無效的回應"
+"Website Information","網站資料"
+"Attribute set with the same name already exists.","同名稱屬性組已存在。"
+"Searchable","可搜尋"
+"Error while saving this role. Please try again later.","儲存此角色中發生錯誤，請稍後再試。"
+"Group was successfully deleted","群組已成功刪除"
+"Order was not changed","訂單未更改"
+"Per Item","毎商品"
+"Edit Product Attribute","編輯產品屬性"
+"System Properties","系統內容"
+"County","郡"
+"General Information","一般資料"
+"ex. http://domain.com","例： http://domain.com"
+"Manage Catalog Categories","管理商品目錄"
+"Wishlist vs. Regular Order","收藏 vs. 一般訂單"
+"New Template","新模板"
+"Delete Website","刪除網站"
+"All stores","所有商店"
+"Purchased On","購買日"
+"Edit Order Status","編輯訂單狀態"
+"Layout","版面"
+"Password Confirmation","密碼確認"
+"Tag was successfully deleted","標籤已成功刪除"
+"Catalog Searches","目錄搜索"
+"To","至"
+"Error while deleting this role. Please try again later.","刪除此角色中發生錯誤，請稍後再試。"
+"Select All Stores","選擇所有商店"
+"Offline","不在線"
+"Recently Viewed","最近查看"
+"Description","敘述"
+"Tax class was successfully deleted","稅別已成功刪除"
+"Are you sure?","你確定嗎？"
+"Never","從未"
+"Block Information","模塊資訊"
+"Email","電子郵件"
+"Included Customer Groups","包含客戶群組"
+"Disable","關閉"
+"Delete Class","刪除類別"
+"Poll Information","投票資料"
+"Create Newsletter Template","建立電子報模板"
+"Coupons","折價卷"
+"Customer","客戶"
+"Last Review","最後評論"
+"Polls","投票"
+"Edit","編輯"
+"Country","國家"
+"Remove","刪除"
+"Account successfully saved","訂單已成功儲存"
+"Days in Wishlist","已收藏天數"
+"Page was successfully saved","頁面已成功儲存"
+"Manage Product Sets","管理產品組"
+"Review Details","詳細評論"
+"Add New Rating","加入新評比"
 "for","for"
-"You cannot update this attribute","You cannot update this attribute"
-"Attribute Code","Attribute Code"
-"Add New Set","Add New Set"
-"Associated Products","Associated Products"
-"Edit Newsletter Template","Edit Newsletter Template"
-"There is already a customer registered using this email","There is already a customer registered using this email"
-"Processed","Processed"
-"Credit Card Type","Credit Card Type"
-"Rating isn't Available","Rating isn't Available"
+"You cannot update this attribute","您無法更新此屬性"
+"Attribute Code","屬性碼"
+"Add New Set","加入新組合"
+"Associated Products","關聯商品"
+"Edit Newsletter Template","編輯電子報模板"
+"There is already a customer registered using this email","此電子郵件帳戶已存在"
+"Processed","已處理"
+"Credit Card Type","信用卡類別"
+"Rating isn't Available","評比無法使用"
 "This tab contains invalid data. Please, solve the problem before saving.","This tab contains invalid data. Please, solve the problem before saving."
 "Remove Item","Remove"
 "Subscribe to Newsletter","Subscribe to Newsletter"
